[tool.poetry]
name = "sphinxcontrib-specs"
version = "0.1.0"
description = "Extensions for building Specializations content."
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"
packages = [{ include = "sphinxcontrib" }]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.961"
html5lib = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
